<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.foto.FotoActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_cd_camera" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dip"
        android:text="@string/centro_custos" />

    <Spinner
        android:id="@+id/spinnerCentroCusto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/centro_custos" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dip"
        android:text="@string/categoria" />

    <Spinner
        android:id="@+id/spinnerCategoria"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/categoria" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/valor" />

    <EditText
        android:id="@+id/txtValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <Button
        android:id="@+id/btnFoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:background="@color/button_background"
        android:text="@string/btnEnviarRecibo" />

    <!-- Novo -->

</LinearLayout>