<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dip"
        android:text="@string/centro_custos" />

    <Spinner
        android:id="@+id/spinnerCentroCusto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/centro_custos" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dip"
        android:text="@string/categoria" />

    <Spinner
        android:id="@+id/spinnerCategoria"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/categoria" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2" />

       <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/valor"
        android:layout_weight="1"
        android:inputType="numberDecimal" />


    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:background="@color/button_background"
        android:text="@string/btnEnviarRecibo" />

</LinearLayout>